--- a/index_list/footer.html
+++ b/index_list/footer.html
@@ -13,12 +13,13 @@
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- mainStyle -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- RWD -->
+    <link rel="stylesheet" href="css/responsive.css">
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
-
 <body>
     <!-- 頁尾 start -->
     <footer>
@@ -34,5 +35,4 @@
     </footer>
     <!-- 頁尾 end -->
 </body>
-
 </html>
