--- a/index_list/header.html
+++ b/index_list/header.html
@@ -13,31 +13,31 @@
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- mainStyle -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- RWD -->
+    <link rel="stylesheet" href="css/responsive.css">
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
-
 <body>
     <!-- 導覽列 start -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="LOGO"></a>
             <div class="nav_icon">
-                <a class="nav_a" href="list.html"><i class="fas fa-store"></i>餐廳列表</a>
-                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i>購物車</a>
-                <a class="nav_a" href="login.html"><i class="fas fa-user-circle"></i>會員登入</a>
+                <a class="nav_a" href="#"><i class="fas fa-store"></i>餐廳列表</a>
+                <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i>購物車</a>
+                <a class="nav_a" href="#"><i class="fas fa-user-circle"></i>會員登入</a>
             </div>
             <div class="rwd_icon">
-                <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
-                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i></a>
-                <a class="nav_a" href="login.html"><i class="fas fa-user-circle"></i></a>
+                <a class="nav_a" href="#"><i class="fas fa-store"></i></a>
+                <a class="nav_a" href="#"><i class="fas fa-shopping-cart"></i></a>
+                <a class="nav_a" href="#"><i class="fas fa-user-circle"></i></a>
             </div>
         </nav>
     </header>
     <!-- 導覽列 end -->
 
 </body>
-
 </html>
