--- a/index_list/restaurant_ self_pick_up.html
+++ b/index_list/restaurant_ self_pick_up.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>restaurant_aside</title>
+  <title>restaurant_self_pick_up</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -28,77 +28,77 @@
     
     <!-- 導覽列 over -->
 
-  <aside>
-    <div class="panel-group" id="accordion">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">預位管理</a>
-          </h4>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">今日訂位</a>
+    <aside>
+      <div class="panel-group" id="accordion">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">預位管理</a>
+            </h4>
+          </div>
+          <div id="collapseOne" class="panel-collapse collapse in">
+            <div class="little_title">
+              <a data-parent="#accordion" href="#collapseOne">今日訂位</a>
+            </div>
+          </div>
+          <div id="collapseOne" class="panel-collapse collapse in">
+            <div class="little_title">
+              <a data-parent="#accordion" href="#collapseOne">歷史訂位紀錄</a>
+            </div>
           </div>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">歷史訂位紀錄</a>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂位管理</a>
+            </h4>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse in">
+            <div class="little_title">
+              <a data-parent="#accordion" href="#collapseOne">今日自取訂餐</a>
+            </div>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse in">
+            <div class="little_title">
+              <a data-parent="#accordion" href="#collapseOne">歷史訂餐紀錄</a>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">搜尋</a>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse in">
+  
+            <form class="sreach_form">
+              <div class="form-group row form_textbox">
+                <label for="booker" class="col-4 col-form-label"></label>
+                <div class="col-10">
+                  <input id="booker" name="booker" placeholder="訂位人" type="text" class="form-control">
+                </div>
+              </div>
+              <div class="form-group row form_textbox">
+                <label for=" booking_number" class="col-4 col-form-label"></label>
+                <div class="col-10">
+                  <input id=" booking_number" name=" booking_number" placeholder="訂位編號" type="text" class="form-control">
+                </div>
+              </div>
+              <div class="form-group row form_textbox">
+                <label for=" booking_date" class="col-4 col-form-label"></label>
+                <div class="col-10">
+                  <input id=" booking_date" name=" booking_date" placeholder="訂位日期" type="text" class="form-control">
+                </div>
+              </div>
+              <div class="form-group row form_textbox">
+                <label for="booker_phone" class="col-4 col-form-label"></label>
+                <div class="col-10">
+                  <input id="booker_phone" name="booker_phone" placeholder="手機" type="text" class="form-control">
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂位管理</a>
-          </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">今日自取訂餐</a>
-          </div>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">歷史訂餐紀錄</a>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">搜尋</a>
-          </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse in">
-
-          <form class="sreach_form">
-            <div class="form-group row form_textbox">
-              <label for="booker" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id="booker" name="booker" placeholder="訂位人" type="text" class="form-control">
-              </div>
-            </div>
-            <div class="form-group row form_textbox">
-              <label for=" booking_number" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id=" booking_number" name=" booking_number" placeholder="訂位編號" type="text" class="form-control">
-              </div>
-            </div>
-            <div class="form-group row form_textbox">
-              <label for=" booking_date" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id=" booking_date" name=" booking_date" placeholder="訂位日期" type="text" class="form-control">
-              </div>
-            </div>
-            <div class="form-group row form_textbox">
-              <label for="booker_phone" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id="booker_phone" name="booker_phone" placeholder="手機" type="text" class="form-control">
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </aside>
+    </aside>
 
   <div class="container">
     <table class="table order_table">
