--- a/index_list/restaurant_ today_booking.html
+++ b/index_list/restaurant_ today_booking.html
@@ -14,7 +14,7 @@
   <!-- mainstyle -->
   <link rel="stylesheet" href="css/style.css">
   <!-- index -->
-  <link rel="stylesheet" href="css/restaurant_self_pick_up.css">
+  <link rel="stylesheet" href="css/restaurant_today_booking.css ">
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
@@ -104,11 +104,12 @@
     <table class="table order_table">
       <thead>
         <tr>
-          <th>已完成</th>
-          <th>取餐編號</th>
-          <th>取餐日期</th>
-          <th>訂餐姓名</th>
-          <th>訂餐金額</th>
+          <th>已帶位</th>
+          <th>訂位編號</th>
+          <th>訂位日期</th>
+          <th>訂位時間</th>
+          <th>訂位人數</th>
+          <th>訂位人</th>
           <th>手機</th>
         </tr>
       </thead>
@@ -122,19 +123,20 @@
             </div>
           </td>
           <td>00001</td>
-          <td>16:30</td>
-          <td>郭美美</td>
-          <td>260</td>
+          <td>2022-01-08</td>
+          <td>17:00</td>
+          <td>3</td>
+          <td>李曉明</td>
           <td>09001993412</td>
           <td>
             <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
               style="margin-left: 80px">
-              訂餐明細
+              詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -90px">
+            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
+              style="margin-left: -35px; border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -149,19 +151,20 @@
             </div>
           </td>
           <td>00001</td>
-          <td>16:30</td>
-          <td>郭美美</td>
-          <td>260</td>
+          <td>2022-01-08</td>
+          <td>17:00</td>
+          <td>3</td>
+          <td>李曉明</td>
           <td>09001993412</td>
           <td>
             <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: 80px">
-              訂餐明細
+              style="margin-left: 80px;">
+              詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -90px">
+            <button class="btn btn-sm detail_btn cancel" data-toggle="modal" data-target="#detailModal"
+              style="margin-left: -35px; border: 1px solid #403C3C;">
               取消
             </button>
           </td>
