--- a/index_list/restaurant_page.html
+++ b/index_list/restaurant_page.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- fontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
-    <!-- breadcrumb -->
-    <link rel="stylesheet" href="css/breadcrumb.css">
     <!-- mainStyle -->
     <link rel="stylesheet" href="css/restaurant_page.css">
     <!-- RWD -->
@@ -33,8 +31,8 @@
     <div class="container">
 
         <div class="row">
-            <button id="order" type="button" class="btn btn-outline-dark btn-lg col-6"><span>我要訂餐</span></button>
-            <button id="take_away" type="button" class="btn btn-outline-dark btn-lg col-6"><span>我要外帶</span></button>
+            <button id="order" class="order_btn"><span>我要訂餐</span></button>
+            <button id="take_away" class="take_away_btn"><span>我要外帶</span></button>
             
             <!-- 導覽列 start -->
             <nav aria-label="breadcrumb">
